# pixel-renderer

./: Cargo.toml
examples/: 2d-drawing.rs  3d-scene.rs  pythagoras.rs
src/: camera.rs  drawing.rs  lib.rs  main.rs  renderer.rs
src/drawing/: circle.rs  line.rs
src/renderer/: drawifier.rs  renderer_3d.rs
