[package]
name = "pixel-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24.2"
itertools = "0.12.0"
obj-rs = "0.7.1"
palette = "0.7.3"
pixels = "0.13.0"
radians = "0.3.1"
winit = { version = "0.29.4", features = ["rwh_05"] }
